[project]
name = "pykour"
version = "0.3.0"
description = "Pykour is modern, fast, and easy to use REST framework for Python."
authors = [{ name = "Takashi Yamashina", email = "takashi.yamashina@gmail.com" }]
requires-python = ">=3.9"
readme = "README.md"
dependencies = [
    "uvicorn[standard]>=0.30,<0.31",
    "watchdog~=4.0",
    "pyyaml~=6.0",
    "colorama>=0.4.6,<0.5",
]

[project.scripts]
pykour = "pykour.cli:main"

[dependency-groups]
test = [
    "pytest~=8.2",
    "pytest-cov~=5.0",
    "pytest-mock~=3.14",
    "pytest-randomly~=3.15",
    "pytest-xdist[psutil]~=3.6",
    "pytest-asyncio>=0.23,<0.24",
    "mysql-connector-python>=9.0.0,<10",
    "psycopg2-binary>=2.9.9,<3",
]
typing = [
    "mypy~=1.10",
    "types-pyyaml>=6.0.12.20240311,<7",
]
dev = [
    "flake8>=7.1.0,<8",
    "black>=24.4.2,<25",
]
security = [
    "bandit>=1.7.9,<2",
    "safety>=3.2.3,<4",
]
doc = [
    "mkdocs-material>=9.5.27,<10",
    "mkdocs-embed-external-markdown>=3.0.2,<4",
    "mkdocs-exclude>=1.0.2,<2",
    "mkdocs-redirects>=1.2.1,<2",
    "mkdocs-simple-hooks>=0.1.5,<0.2",
    "mkdocstrings-python>=1.10.5,<2",
    "tomli>=2.0.1,<3",
    "pyupgrade>=3.16.0,<4",
]

[tool.uv]
default-groups = [
    "test",
    "typing",
    "dev",
    "security",
    "doc",
]

[tool.hatch.build.targets.sdist]
include = ["src/pykour"]

[tool.hatch.build.targets.wheel]
include = ["src/pykour"]

[tool.hatch.build.targets.wheel.sources]
"src/pykour" = "pykour"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
python_version = "3.9"
files = "src, tests"
no_strict_optional = true
ignore_missing_imports = true
check_untyped_defs = true

[tool.black]
target-version = ['py39']
line-length = 120
